# openshock-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs  screen.rs
src/screen/: gauges.rs
