[package]
name = "openshock-tui"
version = "1.0.0"
edition = "2021"
description = "A ratatui based terminal user interface for OpenShock shockers." 
license = "MIT"
repository = "https://github.com/lostquasar/openshock-tui"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
rzap = "0.2.1"
tokio = "1.40.0"
tui-textarea = "0.6.1"
platform-dirs = "0.3.0"
